Color Selection Add the background and the text color and the font family

--- a/app/src/main/res/drawable/background_gradient.xml
+++ b/app/src/main/res/drawable/background_gradient.xml
@@ -4,10 +4,13 @@
         <shape>
             <gradient
                 android:startColor="@color/black"
-                android:endColor="@color/white"
+                android:endColor="@color/black"
                 android:angle="90"
                 android:centerColor="@color/white">
             </gradient>
+            <stroke
+                android:width=".01dp"
+                android:color="@color/dark_yellow"/>
         </shape>
     </item>
 </selector>
