--- a/app/src/main/res/layout/movie_row_layout.xml
+++ b/app/src/main/res/layout/movie_row_layout.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginStart="60dp"
-            android:background="@color/teal_200"
+            android:background="@drawable/background_gradient"
             android:paddingLeft="55dp">
 
             <LinearLayout
@@ -26,23 +26,33 @@
                     android:id="@+id/movie_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:fontFamily="@font/aladin"
                     android:text="William"
-                    android:textSize="23sp" />
+                    android:textSize="20sp"
+                    android:textColor="@color/text"/>
+
                 <TextView
                     android:id="@+id/movie_subtitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
                     android:text="ComingUp This Friday Just for To Enjoy"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="8dp"/>
+                    android:textSize="14sp"
+                    android:textColor="@color/black"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Don't Miss This Great WeekEnd"
-                    android:layout_marginTop="8dp"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    android:layout_marginTop="2dp"
+                    android:text="Don't Miss This Great WeekEnd"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center">
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
