--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/abel</item>
         <item>@font/aladin</item>
+        <item>@font/aleo</item>
+        <item>@font/allerta</item>
+        <item>@font/tillana</item>
+        <item>@font/viga</item>
     </array>
 </resources>
