--- a/app/src/main/res/layout/movie_details_layout.xml
+++ b/app/src/main/res/layout/movie_details_layout.xml
@@ -161,7 +161,7 @@
                         android:layout_marginEnd="5dp">
 
                         <Button
-                            android:id="@+id/button"
+                            android:id="@+id/watch_trailer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="5dp"
@@ -172,6 +172,7 @@
                             android:textColor="@color/white"
                             android:layout_gravity="center"/>
                         <Button
+                            android:id="@+id/movie_ticket"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="5dp"
