--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,9 +2,11 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/abel</item>
+        <item>@font/akronim</item>
         <item>@font/aladin</item>
         <item>@font/aleo</item>
         <item>@font/allerta</item>
+        <item>@font/almendra</item>
         <item>@font/tillana</item>
         <item>@font/viga</item>
     </array>
